修改用例，更新README
